Test/unicodechars/dafny0/TwoCharLiteral.dfy.expect
TwoCharLiteral.dfy(5,13): Error: too many characters in character literal
1 parse errors detected in TwoCharLiteral.dfy
